<resources>
    <string name="app_name">LoginActivity</string>

    <string-array name="userType">
        <item>Student</item>
        <item>Tutor</item>
    </string-array>

    <string name="Role">userType</string>

    <string name="default_text">--</string>
    <string name="title_activity_maps">Map</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_user">Register User</string>
    <string name="already_registered_sign_in_here"><u>Already Registered? Sign in here.</u></string>
    <string name="signup"><u>Don\'t Have an Account? Sign up Here.</u></string>
    <string name="charity_organisation">Charity Organisation</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="bookshelf_logo">bookshelf_logo</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="home_nav">Home</string>
    <string name="search_nav">Search</string>
    <string name="profile_nav">Profile</string>
    <string name="event_nav">Events</string>
    <string name="add_event">Submit Event</string>
    <string name="no_file">No file is selected.</string>
    <string name="select_file">Select File</string>
    <string name="upload_file">Upload File</string>

</resources>
