<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:backgroundTint="@color/colorWhite"
        android:tint="@color/colorPrimary"
        android:onClick="backBtn"/>

    <TextView
        android:id="@+id/notificationFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/no_file"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/selectFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/select_file"
            android:background="@drawable/btn_round"
            android:textColor="@drawable/btn_textcolor_pressed"/>

        <Button
            android:id="@+id/uploadFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:text="@string/upload_file"
            android:enabled="false"
            android:background="@drawable/btn_disabled"
            android:textColor="@drawable/btn_textcolor_pressed" />

    </LinearLayout>
</RelativeLayout>